--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-node8": "^1.2.0",
-    "bitcoin": "^3.0.1",
+    "bitcoin-core": "^2.0.0",
+    "bufferutil": "^3.0.5",
     "chrono-node": "^1.3.5",
     "config": "^1.27.0",
     "discord.js": "^11.2.1",
@@ -20,7 +21,7 @@
   "scripts": {
     "precommit": "prettier --single-quote true --write bot/**/*.js",
     "rebuild": "git pull origin master && npm install && update all",
-    "start":  "pm2 start ecosystem.config.js"
+    "start": "pm2 start ecosystem.config.js"
   },
   "devDependencies": {
     "prettier": "1.7.4"
