update fields for bitcoin-core module
fix amounts

--- a/config/default.json.example
+++ b/config/default.json.example
@@ -9,8 +9,8 @@
     "paytxfee": .01,
     "config": {
       "port": 8892,
-      "user": "username",
-      "pass": "Do-Not-Use-This-Password-Youll-Be-Hacked-For-all-Teh-Moneys!"
+      "username": "username",
+      "passpassword": "Do-Not-Use-This-Password-Youll-Be-Hacked-For-all-Teh-Moneys!"
     }
   },
   
